Implementata API REST per recupero risultati analisi NEEL
